docs(Language/Java/자바 디자인 패턴 및 원칙): Java Reflection